really fixed background image being resized on mobile keyboard opening. for realz this time

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,7 +17,7 @@ body {
 }
 @media only screen and (max-width: 575px) {
   body {
-    background-size: contain;
+    background-size: 100%;
   }
 }
 
